заменил .collect(Collectors.toList()) на .toList()